// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert editor interactions > asks before discarding unsaved changes 1`] = `"Unsaved changes You have unsaved changes. Leave without saving? Stay Discard changes"`;

exports[`alert editor interactions > loads populated alert and registry fixture data 1`] = `
{
  "actionEditors": [
    {
      "role": "conditions-yaml-editor",
      "value": "- type: state
  id: front_door
  entity_id: binary_sensor.front_door
  state: on
  for: 00:05:00
",
    },
    {
      "role": "condition",
      "value": "",
    },
    {
      "role": "notification-actions",
      "value": "- action: logbook.log
  data:
    name: Front door alert
",
    },
    {
      "role": "actions",
      "value": "- action: light.turn_on
  target:
    entity_id:
      - light.hall
",
    },
  ],
  "conditionRows": 1,
  "confirmationEnabled": true,
  "intervalEnabled": true,
  "name": "Front door open",
  "retentionDays": "14",
  "selectedRecipients": [
    "Main phoneRemove",
    "PhoneRemove",
  ],
}
`;

exports[`alert editor interactions > opens template help in a modal from the notification section 1`] = `
"<section role="dialog" aria-modal="true" class="nc-modal nc-template-help-modal">
        <header class="nc-modal-header">
          <h2>Notification templates and helpers</h2>
          <button class="nc-icon-button" aria-label="Close template help" title="Close template help">
            <ha-icon icon="mdi:close"></ha-icon>
          </button>
        </header>
        <main class="nc-modal-body"><div class="nc-help">
          Recipients on selected devices, areas, floors, and labels receive
          direct notifications through Home Assistant's standard Notify
          service. Give conditions an ID in the Condition view, then use that
          ID in the message or title to choose text. For example:
          <code>{% if condition.front_door %}Door open{% elif
            condition.garage %}Garage open{% else %}All clear{% endif %}</code>.
        </div>
        <div class="nc-help">
          <code>alert_id</code>, <code>alert_name</code>,
          <code>alert_active</code>, <code>attempt</code>,
          <code>trigger</code>, <code>now</code>, and
          <code>condition.&lt;id&gt;</code> are available here. Home Assistant
          helpers are also available, such as
          <code>states('sensor.temperature')</code>,
          <code>state_attr('light.kitchen', 'brightness')</code>, and
          <code>is_state('binary_sensor.door', 'on')</code>.
        </div></main>
      </section>"
`;

exports[`alert editor interactions > previews unsaved data without requiring recipients 1`] = `
"id: draft_alert
name: Draft alert
enabled: true
description: ""
icon: mdi:bell-outline
conditions: []
monitor:
  on_change: true
  startup: true
  clear_on_inactive: false
  retention:
    enabled: true
    days: 30
notification:
  target: {}
  title: ""
  message: ""
confirmation:
  enabled: false
  buttons:
    - id: confirm
      label: Done
  notification:
    enabled: false
    message: ""
    clear: true
  reminders:
    enabled: false
    interval: 1800
    max_attempts: 5
    show_attempts: false
    timeout: 900
  actions:
    enabled: false
    items: []
"
`;

exports[`alert editor interactions > renders the Basic editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-input",
    "ha-selector:Description",
    "ha-icon-picker:Icon",
  ],
  "help": [],
  "title": "Basic",
}
`;

exports[`alert editor interactions > renders the Condition editor section 1`] = `
{
  "buttons": [
    "Visual conditions",
    "Conditions YAML",
    "Advanced Jinja",
    "Add condition",
  ],
  "controls": [
    "ha-code-editor:Conditions YAML:yaml:conditions-yaml-editor",
    "ha-code-editor:Jinja condition:jinja2:condition",
  ],
  "help": [
    "No visual conditions configured.",
    "IDs are optional. Set one such as front_door to use its result in a notification with condition.front_door.",
    "Edit the raw conditions: list. This is the YAML behind the visual editor.",
    "The condition should evaluate to true or false. Home Assistant automatically tracks entities referenced by the template.",
  ],
  "title": "Condition",
}
`;

exports[`alert editor interactions > renders the Confirmation editor section 1`] = `
{
  "buttons": [
    "Add response button",
  ],
  "controls": [
    "ha-input",
    "ha-input",
    "ha-switch",
  ],
  "help": [],
  "title": "Confirmation",
}
`;

exports[`alert editor interactions > renders the Notification editor section 1`] = `
{
  "buttons": [
    "Show template variables and sensor helpers",
  ],
  "controls": [
    "ha-input",
    "ha-code-editor:Notification message:jinja2",
  ],
  "help": [],
  "title": "Notification",
}
`;

exports[`alert editor interactions > renders the Notify recipients when confirmed editor section 1`] = `
{
  "buttons": [
    "Show template variables and sensor helpers",
  ],
  "controls": [
    "ha-code-editor:Confirmation message:jinja2",
  ],
  "help": [
    "Optionally send a follow-up message after acknowledgement.",
    "Example: Confirmed by {{confirmed_by}}",
  ],
  "title": "Notify recipients when confirmed",
}
`;

exports[`alert editor interactions > renders the Post-confirmation actions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-code-editor:Post-confirmation actions:yaml:actions",
  ],
  "help": [
    "Runs after a recipient confirms. Enter a YAML list of Home Assistant actions. JSON arrays also work because JSON is valid YAML.",
  ],
  "title": "Post-confirmation actions",
}
`;

exports[`alert editor interactions > renders the Post-send actions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-code-editor:Post-send actions:yaml:notification-actions",
  ],
  "help": [
    "Runs after every notification send. Enter a YAML list of Home Assistant actions. JSON arrays also work because JSON is valid YAML.",
  ],
  "title": "Post-send actions",
}
`;

exports[`alert editor interactions > renders the Recipients editor section 1`] = `
{
  "buttons": [
    "All",
    "Devices",
    "Areas",
    "Floors",
    "Labels",
    "Notification entities",
    "Users",
  ],
  "controls": [
    "ha-input",
  ],
  "help": [
    "Search for a recipient, choose a type when needed, then select it. You can mix devices, areas, labels, floors, and notification entities.",
    "Selected devices, areas, labels, floors, and notification entities are passed to Home Assistant's standard Notify service.",
  ],
  "title": "Recipients",
}
`;

exports[`alert editor interactions > renders the Reminder policy editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-selector:Duration",
    "ha-input",
    "ha-selector:Duration",
    "ha-switch",
  ],
  "help": [
    "Set to 00:00:00 to keep the notification until confirmation.",
  ],
  "title": "Reminder policy",
}
`;

exports[`alert editor interactions > renders the When to check editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-switch",
    "ha-switch",
    "ha-switch",
    "ha-switch:interval-toggle",
    "ha-selector:Duration",
    "ha-switch:Enable history retention",
    "ha-input:History retention days",
  ],
  "help": [
    "Re-checks the condition at this interval, even when no relevant entity-change event occurs.",
    "Completed alert history is removed after this period.",
  ],
  "title": "When to check",
}
`;

exports[`alert editor interactions > saves an edited alert and closes the editor 1`] = `
{
  "conditions": [
    {
      "template": "{{ true }}",
      "type": "template",
    },
  ],
  "confirmation": {
    "actions": {
      "enabled": false,
      "items": [],
    },
    "buttons": [
      {
        "id": "confirm",
        "label": "Done",
      },
    ],
    "enabled": false,
    "notification": {
      "clear": true,
      "enabled": false,
      "message": "",
    },
    "reminders": {
      "enabled": false,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
      "timeout": 900,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:bell-outline",
  "id": "editable_alert",
  "monitor": {
    "clear_on_inactive": false,
    "on_change": true,
    "retention": {
      "days": 30,
      "enabled": true,
    },
    "startup": true,
  },
  "name": "Updated name",
  "notification": {
    "message": "",
    "target": {
      "entity_id": [
        "notify.phone",
      ],
    },
    "title": "",
  },
}
`;

exports[`alert editor interactions > sends a valid draft through the Test alert action 1`] = `
{
  "conditions": [
    {
      "template": "{{ true }}",
      "type": "template",
    },
  ],
  "name": "Testable alert",
  "target": {
    "entity_id": [
      "notify.phone",
    ],
  },
}
`;

exports[`alert editor interactions > shows validation feedback instead of saving an unnamed alert 1`] = `
"<div class="nc-toast">
          Name is required.
        </div>"
`;

exports[`alert editor interactions > switches active sections and keeps the contextual title 1`] = `"<h2 data-role="editor-section-title">When to check</h2>"`;

exports[`condition builder interactions > moves Add ID into the action row and reveals the ID field 1`] = `
<button
  class="nc-button secondary nc-condition-id-toggle"
  type="button"
>
  <ha-icon
    icon="mdi:tag-plus-outline"
  />
  Add ID
</button>
`;

exports[`condition builder interactions > moves Add ID into the action row and reveals the ID field 2`] = `
"<div class="nc-condition-actions">
      <button class="nc-button danger">Remove condition</button>
    </div>"
`;

exports[`condition builder interactions > omits visual conditions without an entity 1`] = `
[
  {
    "entity_id": "sensor.front_door",
    "state": "on",
    "type": "state",
  },
]
`;

exports[`condition builder interactions > removes a condition and marks the editor dirty 1`] = `
<div
  class="nc-help"
>
  No visual conditions configured.
</div>
`;

exports[`recipient picker interactions > filters recipients and removes a selected target 1`] = `
{
  "entity_id": [
    "notify.tablet",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 1`] = `
{
  "entity_id": [
    "notify.phone",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 2`] = `"<span class="nc-target-chip" title="Notification entities">Phone<button class="nc-chip-remove">Remove</button></span>"`;
